--- a/platforms/android/assets/www/css/esup-otp-push.css
+++ b/platforms/android/assets/www/css/esup-otp-push.css
@@ -1,3 +1,9 @@
+body{
+    background-color: whitesmoke;
+    font-size: 14px;
+    font-weight: 500;
+    color: #424242;
+}
 .push-navbar {
     position: relative;
     background-color: #212121;
@@ -10,6 +16,8 @@
     font-size: 20px;
     font-weight: 500;
     color: #fff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .push-navbar-content {
@@ -67,6 +75,12 @@
     margin: auto;
 }
 
+.notice{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    background-color: white;
+    padding: 5%;
+}
 i.icon.icon-push-home {
     width: 24px;
     height: 24px;
