--- a/platforms/browser/www/css/esup-otp-push.css
+++ b/platforms/browser/www/css/esup-otp-push.css
@@ -1,6 +1,12 @@
+body{
+    background-color: whitesmoke;
+    font-size: 14px;
+    font-weight: 500;
+    color: #424242;
+}
 .push-navbar {
     position: relative;
-    background-color: #2196f3;
+    background-color: #212121;
     height: 50px;
     width: 100%;
     min-width: 100%;
@@ -10,6 +16,8 @@
     font-size: 20px;
     font-weight: 500;
     color: #fff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .push-navbar-content {
@@ -53,7 +61,7 @@
 
 .push-panel-header {
     display: flex;
-    background-color: #2196f3;
+    background-color: #212121;
     min-height: 72px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -67,29 +75,12 @@
     margin: auto;
 }
 
-.push-launching-logo {
-    position: relative;
-    margin: auto;
-    width: 50%;
-    max-width: 320px;
-    min-width: 240px;
-    background-image: url("../img/logo.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    border-radius: 100%;
+.notice{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    background-color: white;
+    padding: 5%;
 }
-
-.login-screen-content {
-    background-color: whitesmoke;
-}
-
-.push-launching-logo:before {
-    padding-top: 100%;
-    content: '';
-    display: block;
-}
-
 i.icon.icon-push-home {
     width: 24px;
     height: 24px;
