--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -92,6 +92,10 @@ nav a{
     top : 18px;
 }
 
+.side-nav li {
+    padding: 15px;
+}
+
 /*****************************************
 Switch
 *****************************************/
