style: replace images format .png to .svg with styles

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -93,7 +93,7 @@ nav a{
 }
 
 .side-nav li {
-    padding: 15px;
+    padding: 10px 7px;
 }
 
 /*****************************************
@@ -248,3 +248,16 @@ ul.collection {
         padding-top: 30px !important;
       }
     }
+
+.side-nav a {
+        height: 44px;
+        line-height: 44px;
+ }
+ul#slide-out li {
+    width: 300px
+    }
+.side-nav.fixed a {
+            display: block;
+            padding: 0 12px 0 10px;
+            color: #444;
+         }
