--- a/www/css/style.css
+++ b/www/css/style.css
@@ -598,3 +598,71 @@ body.dark-mode li.collection-item p {
 .btn.dark-mode:hover {
   background-color: #616161;
 }
+
+/* Bottom sheet css */
+.bottom-sheet {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 15px 15px 0 0;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+.bottom-sheet.active {
+  transform: translateY(0);
+}
+
+.sheet-header {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.sheet-body {
+  padding: 20px;
+  text-align: center;
+}
+
+.success-animation {
+  margin-top: 20px;
+  color: green;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  animation: fadeIn 0.9s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Gris foncé transparent */
+    backdrop-filter: blur(2px); /* Applique un flou */
+    z-index: 99; /* Derrière le bottom sheet */
+    opacity: 0;
+    pointer-events: none; /* Inactif quand caché */
+    transition: opacity 0.3s ease-in-out;
+}
+
+.overlay.active {
+    opacity: 1;
+    pointer-events: auto; /* Interactif lorsqu'il est actif */
+}
