--- a/www/css/style.css
+++ b/www/css/style.css
@@ -606,6 +606,7 @@ body.dark-mode li.collection-item p {
   left: 0;
   width: 100%;
   background-color: #ffffff;
+  color: #333 !important;
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 15px 15px 0 0;
   transform: translateY(100%);
@@ -629,14 +630,20 @@ body.dark-mode li.collection-item p {
 }
 
 .success-animation {
-  margin-top: 20px;
+  margin-top: 3px;
   color: green;
   font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
   animation: fadeIn 0.9s ease-in-out;
+}
+.scan-animation {
+  display: block;
+  margin: 0 auto;
+  width: 100px; /* Ajuste la taille selon tes besoins */
+  height: auto;
+  animation: fadeIn 0.8s ease-in-out;
 }
 
 @keyframes fadeIn {
