Fix: bug mode affichage accéssibilité du menu(#7492)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,6 +19,9 @@ main,
 footer {
   padding-left: 240px;
 }
+main {
+  margin-top: 2rem;
+}
 
 .nav-wrapper {
     display: flex;
@@ -453,6 +456,8 @@ ul.collection {
   align-items: center;
   max-height: 4rem;
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin-top: 0;
 }
 
