--- a/www/css/style.css
+++ b/www/css/style.css
@@ -64,14 +64,6 @@ main {
 }
 
 @media only screen and (orientation: landscape) and (max-width: 1024px) {
-<<<<<<< HEAD
-  .sidenav-trigger {
-    display: block;
-  }
-  .side-nav {
-    display: none;
-  }
-=======
     .sidenav-trigger {
         display: block;
     }
@@ -79,17 +71,16 @@ main {
     .side-nav {
         display: none;
     }
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
 
-  .side-nav.open {
-    display: block;
-  }
+    .side-nav.open {
+        display: block;
+    }
 
-  header,
-  main,
-  footer {
-    padding-left: 0;
-  }
+    header,
+    main,
+    footer {
+        padding-left: 0;
+    }
 }
 
 nav {
@@ -143,15 +134,11 @@ nav a {
 }
 
 .side-nav button {
-<<<<<<< HEAD
-  padding: 2px 0px;
-=======
     padding: 2px 0;
     background-color: transparent;
     border: none;
     color: inherit;
     outline: none;
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
 }
 
 .scrollable-container {
@@ -466,10 +453,7 @@ ul.collection {
   vertical-align: middle;
   margin-left: 0.5rem;
 }
-<<<<<<< HEAD
-=======
 
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
 .sidenav-logo {
   max-width: 6rem;
   text-align: center;
@@ -618,12 +602,8 @@ body.dark-mode #slide-out li.active {
   color: #e0e0e0;
   background-color: #121212;
 }
-<<<<<<< HEAD
-body.dark-mode li.collection-item {
-=======
 
 body.dark-mode li.collection-item{
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
   color: #e0e0e0;
   background-color: #1e1e1e !important;
 }
@@ -631,29 +611,19 @@ body.dark-mode li.collection-item{
 body.dark-mode li.collection-item p {
   color: #e0e0e0 !important;
 }
-<<<<<<< HEAD
-body.dark-mode .switch label input[type="checkbox"]:checked + .lever:after {
-=======
 
 body.dark-mode .switch label input[type=checkbox]:checked+.lever:after {
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
   background-color: #0055cc !important;
 }
 
 body.dark-mode .switch label .lever {
   background-color: #4096e7 !important;
 }
-<<<<<<< HEAD
-body.dark-mode .collection .collection-item {
-  background-color: transparent !important;
-}
-=======
 
 body.dark-mode .collection .collection-item{
   background-color: transparent !important;
 }
 
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
 body.dark-mode #totpAddAccount,
 body.dark-mode #totpAddAccountScan,
 body.dark-mode #qrcodeActivation,
@@ -685,14 +655,8 @@ body.dark-mode .when-dark-svg-blue {
   filter: invert(20%) sepia(43%) saturate(5667%) hue-rotate(209deg)
     brightness(97%) contrast(101%);
 }
-<<<<<<< HEAD
-body.dark-mode .text,
-.next,
-.prev {
-=======
 
 body.dark-mode .text, .next, .prev {
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
   color: #e0e0e0 !important;
 }
 
@@ -775,9 +739,25 @@ body.dark-mode ul#slide-out {
 
 @keyframes fadeIn {
   from {
-    opacity: 0;
+      opacity: 0;
   }
 
+  to {
+      opacity: 1;
+  }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Gris foncé transparent */
+    backdrop-filter: blur(2px); /* Applique un flou */
+    z-index: 99; /* Derrière le bottom sheet */
+    opacity: 0;
+  }
   to {
     opacity: 1;
   }
@@ -860,10 +840,7 @@ body.dark-mode ul#slide-out {
   justify-content: center;
   padding-right: 0;
 }
-<<<<<<< HEAD
-=======
 
->>>>>>> a3c23fc (No more auto-hide side menu on landscape tablets)
 /* Toast */
 .toast-error {
   background-color: #ff0000 !important;
